# codex-agent-protocol

./: .gitignore
docs/: architecture.md  getting-started.md  integration-guide.md  operations.md
docs/tutorials/: software-studio.md
scripts/: hello.js
sdk/agent/: .eslintrc.cjs  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk/agent-python/: README.md  pyproject.toml
sdk/agent-python/src/codex_agent_protocol/: __init__.py  agent_registry.py  context.py  integration.py  messaging.py  process.py  security.py  telemetry.py  types.py  workflow.py
sdk/agent-python/tests/: test_agent_registry.py  test_context.py  test_messaging.py  test_security.py  test_workflow.py
sdk/agent/examples/: README.md  basic-workflow.ts
sdk/agent/examples/software-studio/: 01-requirement-intake.ts  02-persona-mapping.ts  03-architecture-sketch.ts  04-product-plan.ts  05-backlog-grooming.ts  06-sprint-scheduler.ts  07-implementation-sync.ts  08-code-review-loop.ts  09-qa-validation.ts  10-release-brief.ts  11-feedback-integration.ts  12-end-to-end-delivery.ts  13-codex-live-planner.ts  shared.ts
sdk/agent/src/: index.ts
sdk/agent/src/context/: context-store.ts  prompt-packer.ts
sdk/agent/src/integration/: integration-host.ts
sdk/agent/src/lifecycle/: agent-registry.ts
sdk/agent/src/messaging/: message-bus.ts  session-store.ts
sdk/agent/src/process/: codex-client.ts  process-supervisor.ts
sdk/agent/test/: agent-registry.test.ts  messaging.test.ts  security-guard.test.ts  workflow-engine.test.ts
(+6 files in other folders)
