[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-agent-protocol"
version = "0.1.0"
description = "Python SDK for the Codex agent runtime"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI", email = "support@openai.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/openai/codex-agent-protocol"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

